--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Martins</title>
   </head>
   <body>
     <header>
       <div class="links">
-        <a href="index.html">Sobre</a>
-        <a href="classes.html">Aulas</a>
+        <a href="/">Sobre</a>
+        <a href="/portfolio">Aulas</a>
       </div>
     </header>
     <div class="wrapper">
