--- a/public/styles.css
+++ b/public/styles.css
@@ -85,12 +85,13 @@ header {
   display: grid;
   gap: 20px;
   grid-template-columns: 1fr 1fr 1fr;
-  margin: 0 auto;
+  margin: 0 auto 32px;
   max-width: 800px;
 }
 
 .card {
   background: var(--color-purple);
+  display: grid;
 }
 
 .card_img img {
@@ -108,6 +109,7 @@ header {
 }
 
 .card_info {
+  align-items: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
