--- a/views/about.njk
+++ b/views/about.njk
@@ -6,14 +6,14 @@
 
 {% block content %}
   <div class="wrapper">
-    <img alt="Martins" src="https://avatars.githubusercontent.com/u/179001313?v=4">
-    <h1>Martins</h1>
-    <h2>Estudante - Full Stack</h2>
-    <p>Determinado em aprender programação na <a target="_blank" href="https://www.rocketseat.com.br/">Rocketseat</a></p>
+    <img alt="{{ data.name }}" src="{{ data.avatar_url }}">
+    <h1>{{ data.name }}</h1>
+    <h2>{{ data.role }}</h2>
+    <p>{{ data.description }}</p>
   </div>
   <div class="links" id="links-footer">
-    <a href="#">Instagram</a>
-    <a href="#">GitHub</a>
-    <a href="#">LinkedIn</a>
+    {% for link in data.links %}
+      <a href="{{ link.url }}">{{ link.name }}</a>
+    {% endfor%}
   </div>
 {% endblock %}
