dynamic css classes and nocache nunjucks

--- a/public/styles.css
+++ b/public/styles.css
@@ -94,6 +94,9 @@ header {
   background: var(--color-purple);
   cursor: pointer;
   display: grid;
+}
+
+.has_favorite {
   position: relative;
 }
 
