redirecting url with javascript

--- a/views/video.njk
+++ b/views/video.njk
@@ -7,7 +7,7 @@
 
 {% block content %}
   <div class="wrapper">
-    <h1>{{ video.title }}</h1>
+    <h1 class="video_title">{{ video.title }}</h1>
   </div>
   <section class="video">
     <div class="video_container" id="{{ video.id }}">
