--- a/public/styles.css
+++ b/public/styles.css
@@ -181,6 +181,11 @@ iframe {
   width: 100%;
 }
 
+.video_title {
+  margin: 0 auto;
+  max-width: 800px;
+}
+
 .video {
   margin: 0 auto;
   max-width: 800px;
