course description page

--- a/challenges/views/layout.njk
+++ b/challenges/views/layout.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" sizes="16x16" type="image/png" href="/favicon.png">    
+    <link rel="icon" sizes="16x16" type="image/png" href="/assets/favicon.png">    
     {% block head %}{% endblock %}
     <link rel="stylesheet" href="/styles.css">
     <title>Challenge</title>
