--- a/challenges/public/styles.css
+++ b/challenges/public/styles.css
@@ -145,73 +145,11 @@ header {
   transition: background 700ms;
 }
 
-.modal-overlay {
-  align-items: center;
-  background: rgba(0, 0, 0, 0.7);
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  opacity: 0;
-  visibility: hidden;
-  width: 100%;
-}
-
-.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.modal {
-  background: black;
-  height: 80%;
-  width: 80%;
-}
-
-.maximize {
-  height: 100%;
-  width: 100%;
-}
-
-.modal_control {
-  display: flex;
-  justify-content: end;
-  width: 100%;
-}
-
-.material-icons {
-  align-items: center;
-  color: var(--color-gray-10);
-  cursor: pointer;
-  display: flex;
-  height: 24px;
-  justify-content: center;
-  padding: 8px;
-  width: 24px;
-}
-
-.material-icons:hover {
-  background: var(--color-gray-30);
-  color: #ffffff;
-  transition: 700ms;
-}
-
-.material-icons:last-child:hover {
-  background: red;
-  color: #ffffff;
-}
-
-.modal_content {
-  height: 100%;
-  width: 100%;
-}
-
-.modal_content iframe {
-  height: 100%;
-  width: 100%;
-}
-
 .status-404 h1 {
   margin: 32px 0 0;
+}
+
+.article iframe {
+  width: 100vw;
+  height: 100vh;
 }
